Fix logo text selection on iOS: add -webkit-user-select: none

--- a/styles.css
+++ b/styles.css
@@ -1542,6 +1542,7 @@ a.logo-link {
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
+  -webkit-user-select: none;
   user-select: none;
 }
 
